--- a/indiaos/www/manifest.json
+++ b/indiaos/www/manifest.json
@@ -17,5 +17,5 @@
 	"background_color": "#000000",
 	"display": "standalone",
 	"scope": "/",
-	"theme_color": "##ecc94b"
+	"theme_color": "#ecc94b"
 }
