--- a/indiaos/indiaos/doctype/conference_settings/conference_settings.json
+++ b/indiaos/indiaos/doctype/conference_settings/conference_settings.json
@@ -1,4 +1,5 @@
 {
+ "actions": [],
  "creation": "2019-11-15 16:21:11.297687",
  "doctype": "DocType",
  "editable_grid": 1,
@@ -7,7 +8,8 @@
   "ticketing",
   "publish_agenda",
   "publish_speakers",
-  "agenda"
+  "agenda",
+  "max_capacity"
  ],
  "fields": [
   {
@@ -33,10 +35,16 @@
    "fieldname": "publish_speakers",
    "fieldtype": "Check",
    "label": "Publish Speakers"
+  },
+  {
+   "fieldname": "max_capacity",
+   "fieldtype": "Int",
+   "label": "Max Capacity"
   }
  ],
  "issingle": 1,
- "modified": "2019-11-15 18:30:07.745082",
+ "links": [],
+ "modified": "2020-01-03 10:24:43.187445",
  "modified_by": "Administrator",
  "module": "IndiaOS",
  "name": "Conference Settings",
